--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,4 @@
+DB 동시성 제어 이슈에 대한 접근 방법 중 하나는 'DB Transaction'을 활용하는 것입니다.
 
+대부분의 어플리케이션 프레임워크에서 'DB Transaction'을 쉽게 사용할 수 있는 수단을 제공합니다.
+DB 내 데이터 갱신이 필요한 경우 이러한 수단을 활용하여 DB 동시성 제어 이슈를 해결할 수 있습니다.
