--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,3 @@
+TCP와 UDP의 가장 큰 차이는 신뢰성 보장 프로세스의 유무와 이에 따른 통신 속도 차입니다.
 
+TCP는 데이터 통신의 신뢰성 보장 프로세스가 포함된 프로토콜입니다. 이에 따라 UDP에 비해 상대적으로 통신 속도가 느립니다. 이러한 특징 때문에 신뢰성이 보장되는 서비스에 사용됩니다. UDP는 신뢰성 보장 프로세스가 존재하지 않지만 대신 통신 속도가 빠릅니다. 이때문에 UDP는 신뢰성은 약간 떨어지지만 통신 속도가 중요한 서비스에 활용됩니다.
