--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,6 @@
-
+1. 브라우저는 HTTP Request 생성합니다.
+2. DNS 서비스를 활용하여 www.naver.com 에 매칭되는 IP 주소 찾습니다.
+3. HTTP Reqeust는 작은 단위의 데이터 조각으로 분할됩니다.
+4. 작은 단위로 분할된 데이터는 IP주소와 MAC주소를 바탕으로 여러 네트워크 단말을 거쳐 Naver의 WAS에 도착합니다.
+5. Naver의 WAS에서 데이터를 요청한 클라이언트에게 Response를 전달합니다.
+6. 클라이언트에서 Naver WAS로 데이터를 요청한 역순으로 Response가 전달됩니다.
